Add correct JVM args for gradle run task